[package]
name = "filterss"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
feed-rs = { version = "2.3.1", features = ["sanitize"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
ureq = "3.2.0"
url = { version = "2.5.8", features = ["serde"] }
